# muffin

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: test.yml
muffin/: __init__.py  __main__.py  global.py
muffin/components/: __init__.py
muffin/components/editor/: __init__.py  colordelegator.py  linenumbers.py  percolator.py  text.py
muffin/components/floating/: __init__.py  notifications.py
muffin/components/statusbar/: __init__.py  item.py  section.py
muffin/components/utils/: __init__.py  fonts.py  setup.py  vbutton.py  watcher.py
muffin/components/views/: __init__.py  explorer.py  logs.py  terminal.py  view.py
muffin/layout/: __init__.py  base.py  panel.py
muffin/layout/content/: __init__.py
muffin/layout/content/sidebar/: __init__.py  tab.py  tabs.py
muffin/layout/panel/: __init__.py  tab.py  tabs.py
muffin/layout/statusbar/: __init__.py  section.py
muffin/utils/: __init__.py  binder.py  events.py
scripts/: muffin.spec
tests/: test_muffin.py
