[tool.poetry]
name = "muffin"
version = "0.1.0"
description = ""
authors = ["Billy <billydevbusiness@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
